--- a/public/css/blossom.css
+++ b/public/css/blossom.css
@@ -1239,12 +1239,12 @@ strong {
   float: right;
 }
 .sidebar.left {
-  border-right: 1px solid #dfe4e9;
+  border-right: 1px solid #e4e4ec;
   height: 100%;
   width: 290px;
 }
 .sidebar.right {
-  border-left: 1px solid #dfe4e9;
+  border-left: 1px solid #e4e4ec;
   height: 100%;
 }
 .sidebar.top {
@@ -1425,7 +1425,7 @@ strong {
   position: absolute;
   top: 2em;
   left: 0;
-  border: 1px solid #dfe4e9;
+  border: 1px solid #e4e4ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   min-width: 180px;
@@ -1482,7 +1482,7 @@ strong {
   width: 100%;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  border: 1px solid #dfe4e9;
+  border: 1px solid #e4e4ec;
   border-collapse: separate;
 }
 .table.striped tr:nth-child(2n) {
@@ -1498,26 +1498,26 @@ strong {
   background-color: transparent;
 }
 .table.cells th {
-  border-left: 1px solid #dfe4e9;
+  border-left: 1px solid #e4e4ec;
 }
 .table.cells th:first-child {
   border-left: 0;
 }
 .table.cells tr td {
-  border-left: 1px solid #dfe4e9;
+  border-left: 1px solid #e4e4ec;
 }
 .table.cells tr td:first-child {
   border-left: 0;
 }
 .table th {
   padding: 1em;
-  background-color: #f1f4f7;
+  background-color: #f5f6f7;
   font-weight: 600;
-  border-bottom: 1px solid #dfe4e9;
+  border-bottom: 1px solid #e4e4ec;
 }
 .table tr td {
   padding: 0.8em 1em;
-  border-bottom: 1px solid #dfe4e9;
+  border-bottom: 1px solid #e4e4ec;
   line-height: 1.375em;
 }
 .table tr td i {
@@ -1536,7 +1536,7 @@ strong {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   color: #505050;
-  background-color: #dfe4e9;
+  background-color: #e4e4ec;
   outline: 0;
   padding: 0 1.4em;
   text-align: center;
@@ -1573,8 +1573,8 @@ strong {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   background-color: transparent;
-  -webkit-box-shadow: inset 0px 0px 0px 1px #dfe4e9;
-  box-shadow: inset 0px 0px 0px 1px #dfe4e9;
+  -webkit-box-shadow: inset 0px 0px 0px 1px #e4e4ec;
+  box-shadow: inset 0px 0px 0px 1px #e4e4ec;
   color: #505050;
 }
 .button.outlined.white {
@@ -1586,7 +1586,7 @@ strong {
 .button:hover {
   -webkit-box-shadow: none;
   box-shadow: none;
-  background-color: #dfe4e9;
+  background-color: #e4e4ec;
 }
 .button.red {
   color: #fff;
@@ -1937,7 +1937,7 @@ ol.ordered li[value]:before {
 }
 .label {
   font-size: 0.875em;
-  background-color: #dfe4e9;
+  background-color: #e4e4ec;
   color: #707f87;
   padding: 0.55em 0.72em;
   display: inline-block;
@@ -2045,7 +2045,7 @@ ol.ordered li[value]:before {
   text-align: center;
 }
 .divider:not(.vertical):not(.horizontal) {
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .divider.horizontal {
   display: table;
@@ -2069,7 +2069,7 @@ ol.ordered li[value]:before {
 .message {
   padding: 0.875em 1.4em;
   background-color: #f7f9fb;
-  border: 1px solid #dfe4e9;
+  border: 1px solid #e4e4ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   margin: 1em 0;
@@ -2131,7 +2131,7 @@ ol.ordered li[value]:before {
   border-radius: 4px;
   text-align: left;
   border: 0;
-  border: 1px solid #dfe4e9;
+  border: 1px solid #e4e4ec;
   -webkit-transition: border-color 0.14s ease;
   -moz-transition: border-color 0.14s ease;
   -o-transition: border-color 0.14s ease;
@@ -2184,6 +2184,112 @@ ol.ordered li[value]:before {
   border-radius: 0 4px 4px 0;
   display: inline-block;
   vertical-align: top;
+}
+.menu {
+  width: 100%;
+  *zoom: 1;
+}
+.menu:before,
+.menu:after {
+  content: '';
+  display: table;
+}
+.menu:after {
+  clear: both;
+}
+.menu.panel {
+  position: relative;
+  background-color: #fff;
+  -webkit-box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
+  box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
+  border: 1px solid #e4e4ec;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  overflow: hidden;
+}
+.menu.panel .item {
+  padding: 0.8em 1.1em;
+  margin: 0 !important;
+  border-right: 1px solid #e4e4ec;
+}
+.menu.panel .item.active {
+  background-color: #f5f6f7;
+}
+.menu.panel .item:hover {
+  background-color: #f5f6f7;
+}
+.menu.panel.vertical .item {
+  border: 0;
+  display: block;
+}
+.menu.panel.vertical .item + .item {
+  border-top: 1px solid #e4e4ec;
+}
+.menu .item {
+  display: inline-block;
+  position: relative;
+  padding: 0.7em 1.1em;
+  color: #3e464a;
+  cursor: pointer;
+}
+.menu .item .label {
+  padding: 0.35em 0.52em;
+  margin: -0.35em -0.52em;
+  margin-left: 0.8em;
+}
+.menu .item + .item {
+  margin-left: 0.4em;
+}
+.menu.vertical {
+  width: 15em;
+}
+.menu.vertical:not(.panel) .item {
+  display: block;
+}
+.menu.vertical:not(.panel) .item + .item {
+  margin: 0.4em 0 0 0 !important;
+}
+.menu.underlined.show {
+  border-bottom: 2px solid #e4e4ec;
+}
+.menu.underlined.show .item {
+  margin: 0 0 -2px 0;
+}
+.menu.underlined .item {
+  padding: 0.85em 1.14em;
+}
+.menu.underlined .item.active {
+  border-bottom: 2px #3e464a solid;
+  color: #3e464a;
+  font-weight: 700;
+}
+.menu.underlined.vertical.show {
+  border: 0;
+  border-right: 2px solid #e4e4ec;
+}
+.menu.underlined.vertical.show .item {
+  margin: 0 -2px 0 0;
+}
+.menu.underlined.vertical .item {
+  padding: 0.65em 1.14em;
+}
+.menu.underlined.vertical .item .label {
+  float: right;
+  margin-right: 0.3em;
+}
+.menu.underlined.vertical .item.active {
+  border: 0;
+  border-right: 2px #3e464a solid;
+}
+.menu.pills .item {
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
+.menu.pills .item.active {
+  background-color: #f5f6f7;
+}
+.menu.pills .item:hover {
+  background-color: #f5f6f7;
 }
 .text-primary {
   color: #6435c9;
@@ -2351,13 +2457,13 @@ ol.ordered li[value]:before {
   background-color: #202020 !important;
 }
 .smoke:not(.button) {
-  background-color: #dfe4e9 !important;
+  background-color: #e4e4ec !important;
 }
 .smoke:not(.button).light {
   background-color: #f7f9fb !important;
 }
 .smoke:not(.button).dark {
-  background-color: #c4cdd6 !important;
+  background-color: #c9c9d9 !important;
 }
 .loader {
   border-style: solid;
@@ -2399,7 +2505,7 @@ ol.ordered li[value]:before {
   background-color: #fff;
   -webkit-box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
   box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
-  border: 1px solid #dfe4e9;
+  border: 1px solid #e4e4ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   margin: 1em 0;
@@ -2425,7 +2531,7 @@ ol.ordered li[value]:before {
   display: block;
 }
 .module .section + .section {
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .circular {
   -webkit-border-radius: 500em;
@@ -2459,7 +2565,7 @@ ol.ordered li[value]:before {
   background-color: #fff;
   -webkit-box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
   box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
-  border: 1px solid #dfe4e9;
+  border: 1px solid #e4e4ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   width: 285px;
@@ -2555,7 +2661,7 @@ ol.ordered li[value]:before {
   padding: 0.875em 1em;
   color: #8c99a0;
   font-size: 0.925em;
-  border-top: 1px solid #e7ebef;
+  border-top: 1px solid #ebebf1;
 }
 .card .content.footer.button {
   padding: 0;
@@ -2677,7 +2783,7 @@ ol.ordered li[value]:before {
   margin-top: 1em;
 }
 .progress {
-  background-color: #dfe4e9;
+  background-color: #e4e4ec;
   *zoom: 1;
   -webkit-border-radius: 4px;
   border-radius: 4px;
@@ -2696,7 +2802,7 @@ ol.ordered li[value]:before {
   height: 100%;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  background-color: #475767;
+  background-color: #494967;
   position: relative;
   width: 0;
 }
@@ -2748,7 +2854,7 @@ ol.ordered li[value]:before {
   align-items: stretch;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  border: 1px solid #dfe4e9;
+  border: 1px solid #e4e4ec;
 }
 .stages.vertical {
   -webkit-box-orient: vertical;
@@ -2773,7 +2879,7 @@ ol.ordered li[value]:before {
   text-align: center;
 }
 .stages.vertical .stage + .stage {
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .stages.vertical .stage:first-child {
   -webkit-border-radius: 4px 4px 0 0;
@@ -2857,14 +2963,14 @@ ol.ordered li[value]:before {
   height: 0;
   border-top: 0.6em solid transparent;
   border-bottom: 0.6em solid transparent;
-  border-left: 0.6em solid #dfe4e9;
+  border-left: 0.6em solid #e4e4ec;
   position: absolute;
   right: -0.6em;
   top: 35%;
   z-index: 800;
 }
 .stages .stage + .stage {
-  border-left: 1px solid #dfe4e9;
+  border-left: 1px solid #e4e4ec;
 }
 .stages .stage.disabled > * {
   opacity: 0.3;
