--- a/public/css/page.css
+++ b/public/css/page.css
@@ -56,7 +56,7 @@
   height: 100%;
   background-color: #fff;
   width: 100%;
-  border-bottom: 1px solid #dfe4e9;
+  border-bottom: 1px solid #e4e4ec;
 }
 .hero h1 {
   margin-top: 0.3em;
@@ -169,7 +169,7 @@ section.size p {
 }
 .features {
   *zoom: 1;
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .features:before,
 .features:after {
@@ -269,7 +269,7 @@ section.size p {
   padding: 0 2em;
 }
 .column + .column {
-  border-left: 1px solid #dfe4e9;
+  border-left: 1px solid #e4e4ec;
 }
 .column h4 {
   font-weight: 400;
@@ -302,7 +302,7 @@ section.size p {
 .block-grey {
   width: 100%;
   height: 3em;
-  background-color: #dfe4e9;
+  background-color: #e4e4ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   display: block;
@@ -359,7 +359,7 @@ section.size p {
   font-weight: 300;
 }
 .module .antiScroll + .antiScroll {
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .example:hover .view-source {
   display: block !important;
@@ -367,10 +367,14 @@ section.size p {
 .example + .example {
   margin-top: 40px;
   padding-top: 40px;
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .example .grid-row [class^='clm-'] {
   margin: 6px 0;
+}
+.example.menus p {
+  margin: 2em 0;
+  color: #707f87;
 }
 .example.types .progress + .progress {
   margin-top: 14px;
@@ -385,7 +389,7 @@ section.size p {
   margin-left: 1em;
 }
 .example.animations .group {
-  border: 1px solid #dfe4e9;
+  border: 1px solid #e4e4ec;
   *zoom: 1;
   float: left;
   clear: none;
@@ -426,17 +430,17 @@ section.size p {
   clear: both;
 }
 .example .animation + .animation {
-  border-left: 1px solid #dfe4e9;
+  border-left: 1px solid #e4e4ec;
 }
 .example .animation:nth-child(4n) {
   border-left: 0;
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .example .animation:nth-child(5n) {
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .example .animation:nth-child(6n) {
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 .example .animation code {
   position: absolute;
@@ -700,7 +704,7 @@ section.size p {
   -webkit-border-radius: 0 0 4px 4px;
   border-radius: 0 0 4px 4px;
   padding: 0;
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
@@ -714,7 +718,7 @@ section.size p {
 .sidebar.top,
 .subbar {
   background-color: #fff;
-  border-bottom: 1px solid #dfe4e9;
+  border-bottom: 1px solid #e4e4ec;
   padding: 24px 0 22px 0;
   z-index: 2300;
 }
@@ -850,7 +854,7 @@ aside.sidebar li a {
   width: 100%;
   margin-left: 0%;
   margin-right: 0%;
-  border-bottom: 1px solid #dfe4e9;
+  border-bottom: 1px solid #e4e4ec;
   padding-bottom: 28px;
   margin-bottom: 40px;
 }
@@ -904,10 +908,10 @@ footer.footer .aotik:after {
 }
 footer.footer .inner {
   padding: 1em 0;
-  border-top: 1px solid #dfe4e9;
+  border-top: 1px solid #e4e4ec;
 }
 footer.footer .inner .links li a {
-  font-size: 0.875em;
+  font-size: 0.9em;
 }
 .homepage + footer.footer {
   position: static;
