--- a/public/css/blossom.css
+++ b/public/css/blossom.css
@@ -1239,12 +1239,12 @@ strong {
   float: right;
 }
 .sidebar.left {
-  border-right: 1px solid #e4e4ec;
+  border-right: 1px solid #e4e9ec;
   height: 100%;
   width: 290px;
 }
 .sidebar.right {
-  border-left: 1px solid #e4e4ec;
+  border-left: 1px solid #e4e9ec;
   height: 100%;
 }
 .sidebar.top {
@@ -1354,6 +1354,9 @@ strong {
 .invisible {
   visibility: hidden !important;
 }
+.borderless {
+  border: 0 !important;
+}
 .centered:not(.vertical):not(.horizontal) {
   position: absolute;
   -webkit-transform-style: preserve-3d;
@@ -1425,7 +1428,7 @@ strong {
   position: absolute;
   top: 2em;
   left: 0;
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   min-width: 180px;
@@ -1482,7 +1485,7 @@ strong {
   width: 100%;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
   border-collapse: separate;
 }
 .table.striped tr:nth-child(2n) {
@@ -1498,13 +1501,13 @@ strong {
   background-color: transparent;
 }
 .table.cells th {
-  border-left: 1px solid #e4e4ec;
+  border-left: 1px solid #e4e9ec;
 }
 .table.cells th:first-child {
   border-left: 0;
 }
 .table.cells tr td {
-  border-left: 1px solid #e4e4ec;
+  border-left: 1px solid #e4e9ec;
 }
 .table.cells tr td:first-child {
   border-left: 0;
@@ -1513,11 +1516,11 @@ strong {
   padding: 1em;
   background-color: #f5f6f7;
   font-weight: 600;
-  border-bottom: 1px solid #e4e4ec;
+  border-bottom: 1px solid #e4e9ec;
 }
 .table tr td {
   padding: 0.8em 1em;
-  border-bottom: 1px solid #e4e4ec;
+  border-bottom: 1px solid #e4e9ec;
   line-height: 1.375em;
 }
 .table tr td i {
@@ -1536,7 +1539,7 @@ strong {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   color: #505050;
-  background-color: #e4e4ec;
+  background-color: #e4e9ec;
   outline: 0;
   padding: 0 1.4em;
   text-align: center;
@@ -1573,8 +1576,8 @@ strong {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   background-color: transparent;
-  -webkit-box-shadow: inset 0px 0px 0px 1px #e4e4ec;
-  box-shadow: inset 0px 0px 0px 1px #e4e4ec;
+  -webkit-box-shadow: inset 0px 0px 0px 1px #e4e9ec;
+  box-shadow: inset 0px 0px 0px 1px #e4e9ec;
   color: #505050;
 }
 .button.outlined.white {
@@ -1586,7 +1589,7 @@ strong {
 .button:hover {
   -webkit-box-shadow: none;
   box-shadow: none;
-  background-color: #e4e4ec;
+  background-color: #e4e9ec;
 }
 .button.red {
   color: #fff;
@@ -1818,9 +1821,9 @@ ol.list {
 }
 .list li,
 .list .item {
-  padding: 0.22em 0;
+  padding: 0.25em 0;
   position: relative;
-  line-height: 1.15em;
+  line-height: 1.2em;
   display: list-item;
   table-layout: fixed;
 }
@@ -1937,7 +1940,7 @@ ol.ordered li[value]:before {
 }
 .label {
   font-size: 0.875em;
-  background-color: #e4e4ec;
+  background-color: #e4e9ec;
   color: #707f87;
   padding: 0.55em 0.72em;
   display: inline-block;
@@ -2045,7 +2048,7 @@ ol.ordered li[value]:before {
   text-align: center;
 }
 .divider:not(.vertical):not(.horizontal) {
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .divider.horizontal {
   display: table;
@@ -2069,7 +2072,7 @@ ol.ordered li[value]:before {
 .message {
   padding: 0.875em 1.4em;
   background-color: #f7f9fb;
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   margin: 1em 0;
@@ -2131,7 +2134,7 @@ ol.ordered li[value]:before {
   border-radius: 4px;
   text-align: left;
   border: 0;
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
   -webkit-transition: border-color 0.14s ease;
   -moz-transition: border-color 0.14s ease;
   -o-transition: border-color 0.14s ease;
@@ -2202,15 +2205,21 @@ ol.ordered li[value]:before {
   background-color: #fff;
   -webkit-box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
   box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   overflow: hidden;
 }
+.menu.panel.borderless {
+  border: 1px solid #e4e9ec !important;
+}
+.menu.panel.borderless .item {
+  border: 0 !important;
+}
 .menu.panel .item {
   padding: 0.8em 1.1em;
   margin: 0 !important;
-  border-right: 1px solid #e4e4ec;
+  border-right: 1px solid #e4e9ec;
 }
 .menu.panel .item.active {
   background-color: #f5f6f7;
@@ -2223,7 +2232,7 @@ ol.ordered li[value]:before {
   display: block;
 }
 .menu.panel.vertical .item + .item {
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .menu .item {
   display: inline-block;
@@ -2250,7 +2259,7 @@ ol.ordered li[value]:before {
   margin: 0.4em 0 0 0 !important;
 }
 .menu.underlined.show {
-  border-bottom: 2px solid #e4e4ec;
+  border-bottom: 2px solid #e4e9ec;
 }
 .menu.underlined.show .item {
   margin: 0 0 -2px 0;
@@ -2265,7 +2274,7 @@ ol.ordered li[value]:before {
 }
 .menu.underlined.vertical.show {
   border: 0;
-  border-right: 2px solid #e4e4ec;
+  border-right: 2px solid #e4e9ec;
 }
 .menu.underlined.vertical.show .item {
   margin: 0 -2px 0 0;
@@ -2457,13 +2466,13 @@ ol.ordered li[value]:before {
   background-color: #202020 !important;
 }
 .smoke:not(.button) {
-  background-color: #e4e4ec !important;
+  background-color: #e4e9ec !important;
 }
 .smoke:not(.button).light {
   background-color: #f7f9fb !important;
 }
 .smoke:not(.button).dark {
-  background-color: #c9c9d9 !important;
+  background-color: #c9d3d9 !important;
 }
 .loader {
   border-style: solid;
@@ -2505,11 +2514,11 @@ ol.ordered li[value]:before {
   background-color: #fff;
   -webkit-box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
   box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   margin: 1em 0;
-  padding: 1em;
+  padding: 1.3em;
 }
 .module .antiScroll {
   overflow: hidden;
@@ -2531,7 +2540,7 @@ ol.ordered li[value]:before {
   display: block;
 }
 .module .section + .section {
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .circular {
   -webkit-border-radius: 500em;
@@ -2565,7 +2574,7 @@ ol.ordered li[value]:before {
   background-color: #fff;
   -webkit-box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
   box-shadow: 0 1px 2px 0 rgba(38,38,40,0.15);
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   width: 285px;
@@ -2661,7 +2670,7 @@ ol.ordered li[value]:before {
   padding: 0.875em 1em;
   color: #8c99a0;
   font-size: 0.925em;
-  border-top: 1px solid #ebebf1;
+  border-top: 1px solid #ebeef1;
 }
 .card .content.footer.button {
   padding: 0;
@@ -2783,7 +2792,7 @@ ol.ordered li[value]:before {
   margin-top: 1em;
 }
 .progress {
-  background-color: #e4e4ec;
+  background-color: #e4e9ec;
   *zoom: 1;
   -webkit-border-radius: 4px;
   border-radius: 4px;
@@ -2802,7 +2811,7 @@ ol.ordered li[value]:before {
   height: 100%;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  background-color: #494967;
+  background-color: #495c67;
   position: relative;
   width: 0;
 }
@@ -2854,7 +2863,7 @@ ol.ordered li[value]:before {
   align-items: stretch;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
 }
 .stages.vertical {
   -webkit-box-orient: vertical;
@@ -2879,7 +2888,7 @@ ol.ordered li[value]:before {
   text-align: center;
 }
 .stages.vertical .stage + .stage {
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .stages.vertical .stage:first-child {
   -webkit-border-radius: 4px 4px 0 0;
@@ -2963,14 +2972,14 @@ ol.ordered li[value]:before {
   height: 0;
   border-top: 0.6em solid transparent;
   border-bottom: 0.6em solid transparent;
-  border-left: 0.6em solid #e4e4ec;
+  border-left: 0.6em solid #e4e9ec;
   position: absolute;
   right: -0.6em;
   top: 35%;
   z-index: 800;
 }
 .stages .stage + .stage {
-  border-left: 1px solid #e4e4ec;
+  border-left: 1px solid #e4e9ec;
 }
 .stages .stage.disabled > * {
   opacity: 0.3;
@@ -3037,7 +3046,7 @@ code {
   font-size: 0.875em;
 }
 .message code {
-  background-color: rgba(0,0,0,0.05);
+  background-color: rgba(0,0,0,0.06);
 }
 @-moz-keyframes spin {
   0% {
