--- a/public/css/page.css
+++ b/public/css/page.css
@@ -56,7 +56,7 @@
   height: 100%;
   background-color: #fff;
   width: 100%;
-  border-bottom: 1px solid #e4e4ec;
+  border-bottom: 1px solid #e4e9ec;
 }
 .hero h1 {
   margin-top: 0.3em;
@@ -169,7 +169,7 @@ section.size p {
 }
 .features {
   *zoom: 1;
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .features:before,
 .features:after {
@@ -269,7 +269,7 @@ section.size p {
   padding: 0 2em;
 }
 .column + .column {
-  border-left: 1px solid #e4e4ec;
+  border-left: 1px solid #e4e9ec;
 }
 .column h4 {
   font-weight: 400;
@@ -302,7 +302,7 @@ section.size p {
 .block-grey {
   width: 100%;
   height: 3em;
-  background-color: #e4e4ec;
+  background-color: #e4e9ec;
   -webkit-border-radius: 4px;
   border-radius: 4px;
   display: block;
@@ -343,6 +343,47 @@ section.size p {
 .message + .module.collapsed {
   margin-top: 1em;
 }
+.installing .explanation {
+  margin-top: 0.3em;
+}
+.installing .module {
+  margin: 1.4em 0;
+  padding: 1.3em 1.3em 1.6em 1.3em;
+}
+.installing .contain + .contain {
+  margin-top: 4em;
+}
+.explanation {
+  margin-bottom: 1em;
+  position: relative;
+}
+.explanation .view-source {
+  color: #3e464a;
+  display: none;
+  cursor: pointer;
+  font-size: 1.1em;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.explanation .view-source:hover {
+  color: #6435c9;
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.explanation h6 {
+  font-size: 1.2em;
+}
+.explanation p {
+  color: #707f87;
+  margin: 0.4em 0 0 0;
+  display: block;
+  line-height: 1.4em;
+}
+.explanation p + p {
+  margin: 0.2em 0 0 0;
+}
 .module .antiScroll {
   padding: 1em 0;
 }
@@ -359,7 +400,7 @@ section.size p {
   font-weight: 300;
 }
 .module .antiScroll + .antiScroll {
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .example:hover .view-source {
   display: block !important;
@@ -367,14 +408,17 @@ section.size p {
 .example + .example {
   margin-top: 40px;
   padding-top: 40px;
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .example .grid-row [class^='clm-'] {
   margin: 6px 0;
 }
-.example.menus p {
-  margin: 2em 0;
+.example.menus .note {
+  margin: 2em 0 0 0;
   color: #707f87;
+}
+.example.menus .note + .menu {
+  margin: 2em 0 0 0;
 }
 .example.types .progress + .progress {
   margin-top: 14px;
@@ -389,7 +433,7 @@ section.size p {
   margin-left: 1em;
 }
 .example.animations .group {
-  border: 1px solid #e4e4ec;
+  border: 1px solid #e4e9ec;
   *zoom: 1;
   float: left;
   clear: none;
@@ -430,17 +474,17 @@ section.size p {
   clear: both;
 }
 .example .animation + .animation {
-  border-left: 1px solid #e4e4ec;
+  border-left: 1px solid #e4e9ec;
 }
 .example .animation:nth-child(4n) {
   border-left: 0;
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .example .animation:nth-child(5n) {
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .example .animation:nth-child(6n) {
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 .example .animation code {
   position: absolute;
@@ -538,37 +582,6 @@ section.size p {
 }
 .example .cards > .card:not(.fluid) {
   margin-right: 20px;
-}
-.example .explanation {
-  margin-bottom: 15px;
-  position: relative;
-}
-.example .explanation .view-source {
-  color: #3e464a;
-  display: none;
-  cursor: pointer;
-  font-size: 1.1em;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.example .explanation .view-source:hover {
-  color: #6435c9;
-  opacity: 1;
-  -ms-filter: none;
-  filter: none;
-}
-.example .explanation h6 {
-  font-size: 1.1em;
-}
-.example .explanation p {
-  color: #707f87;
-  margin: 6px 0 0 0;
-  display: block;
-  line-height: 1.3em;
-}
-.example .explanation p + p {
-  margin: 3px 0 0 0;
 }
 .example.buttons .button {
   margin: 0.34em 0.6em 0.34em 0;
@@ -700,25 +713,25 @@ section.size p {
 }
 .module .footer pre {
   background-color: #f7f9fb;
-  margin: 1em -1em -1em -1em;
+  margin: 1em -1.3em -1.3em -1.3em;
   -webkit-border-radius: 0 0 4px 4px;
   border-radius: 0 0 4px 4px;
   padding: 0;
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
   overflow: auto;
 }
 .module .footer code {
-  padding: 1em;
+  padding: 1.3em;
   margin: 0;
   background-color: transparent;
 }
 .sidebar.top,
 .subbar {
   background-color: #fff;
-  border-bottom: 1px solid #e4e4ec;
+  border-bottom: 1px solid #e4e9ec;
   padding: 24px 0 22px 0;
   z-index: 2300;
 }
@@ -854,7 +867,7 @@ aside.sidebar li a {
   width: 100%;
   margin-left: 0%;
   margin-right: 0%;
-  border-bottom: 1px solid #e4e4ec;
+  border-bottom: 1px solid #e4e9ec;
   padding-bottom: 28px;
   margin-bottom: 40px;
 }
@@ -908,16 +921,16 @@ footer.footer .aotik:after {
 }
 footer.footer .inner {
   padding: 1em 0;
-  border-top: 1px solid #e4e4ec;
+  border-top: 1px solid #e4e9ec;
 }
 footer.footer .inner .links li a {
   font-size: 0.9em;
 }
-.homepage + footer.footer {
+.wrap + footer.footer {
   position: static;
   margin: 0;
 }
-.homepage + footer.footer .inner {
+.wrap + footer.footer .inner {
   border: 0;
   padding: 2em 0;
 }
