--- a/public/css/blossom.css
+++ b/public/css/blossom.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700,900,300");
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
